finished to assignment specifications

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<script type="text/javascript" src="assets/javascript/game2.js"></script>
 </head>
 <body>
 	<div class="container-fluid">
@@ -21,6 +21,8 @@
 			<div class="col-xs-12"><button id="attack">Attack</button></div>
 			<div class="col-xs-12"><h5>Defender</h5></div>
 			<div class="col-xs-12" id="defender"></div>
+			<div class="col-xs-12" id="attackLog"></div>
+			<div class="col-xs-12" id="endGame"></div>
 		</div>
 	</div>
 </body>
