changed button styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-	<script type="text/javascript" src="assets/javascript/game2.js"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -20,10 +20,9 @@
 			</div>
 			<div class="col-xs-4 text-center">
 				<h3>Star Wars Game</h3>
-				<button class="btn btn-default" id="attack">Attack</button>
+				<button class="btn btn-danger" id="attack">Attack</button>
 				<div id="attackLog">Select your character</div>
 				<div id="endGame"></div>
-				
 			</div>
 			<div class="col-xs-4 text-center">
 				<h5>Enemies to attack</h5>
